Overflow-x:hidden to fix larger than device width

--- a/src/assets/App.scss
+++ b/src/assets/App.scss
@@ -11,6 +11,7 @@ body {
   min-height: 100%;
   margin: 0 !important;
   padding: 0 !important;
+  overflow-x: hidden !important;
 }
 
 #app {
@@ -22,4 +23,5 @@ body {
   margin: 0 !important;
   padding: 0 !important;
   min-height: 100%;
+  overflow-x: hidden !important;
 }
